fix: fix layout on small displays

--- a/src/index.css
+++ b/src/index.css
@@ -36,13 +36,12 @@ body {
 }
 
 .calculator {
-    width: 20em;
+    width: 22rem;
     border: 1px solid #000000;
-    border-radius: 1.25em;
-    box-shadow: 0 1.5em 3em var(--outer-shadow);
+    border-radius: 20px;
+    box-shadow: 0 20px 40px var(--outer-shadow);
     position: relative;
     overflow: hidden;
-    font-size: 1em;
 }
 
 .calculator::before {
@@ -50,7 +49,7 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
-    box-shadow: inset 0 0 0.25em 0 var(--inner-glow);
+    box-shadow: inset 0 0 5px 0 var(--inner-glow);
     left: 0;
     right: 0;
     top: 0;
@@ -62,17 +61,17 @@ body {
 
 .calc_header {
     background-color: var(--header-body-bg);
-    height: 15vh;
+    height: 14vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .header_top {
-    padding: 0.75em 0 0 0.75em;
+    padding: 10px 0 0 10px;
     display: flex;
     flex-direction: row;
-    gap: 0.75em;
+    gap: 0.7rem;
 }
 
 .control_button {
@@ -95,9 +94,10 @@ body {
 
 .display {
     color: var(--font-color);
-    font-size: 8vh;
+    font-size: 9vh;
+    font-weight: 300;
     text-align: right;
-    padding-right: 0.25em;
+    padding-right: 10px;
 }
 
 .calc_body {
@@ -123,19 +123,18 @@ body {
     display: flex;
     flex-wrap: nowrap;
     flex-direction: row;
-    height: 8vh;
+    height: 9vh;
     gap: 2px;
 }
 
 .calc_body .button {
     display: flex;
     justify-content: center;
-    font-weight: 400;
+    align-items: center;
     font-size: 4vh;
     background-color: var(--button-reg-bg);
     cursor: pointer;
     width: 50%;
-    line-height: 8vh;
 }
 
 .calc_row .dark {
@@ -153,7 +152,7 @@ body {
 }
 
 .wide {
-    flex-grow: 2;
+    flex-grow: 1;
 }
 
 #toggle {
@@ -166,9 +165,9 @@ body {
     border: 1px solid #000000;
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 330px) {
     .calculator {
-        margin: 0.75em;
+        width: 90%;
     }
 
     .calc_body .button {
